fix(PoiList): fix title not being truncated on small screens

--- a/src/PoiList/PoiList.css
+++ b/src/PoiList/PoiList.css
@@ -7,6 +7,7 @@
 
 .poi-list-item {
   display: inline-block;
+  width: calc(100% - var(--margin-default));
   max-width: 375px;
   margin-left: var(--margin-default);
   border-radius: var(--border-radius-default);
